Update bot informations Closes #1, closes #2, closes #3 and closes #4

--- a/index.html
+++ b/index.html
@@ -51,23 +51,45 @@
     </center>
     <script src="assets/js/jquery-3.4.1.min.js"></script>
     <script src="assets/js/discord.11.5-dev.min.js"></script>
+    <script src="assets/js/moment.min.js"></script>
     <script>
-        function getFormattedDate(date = new Date()) {
-            let month = date.getMonth() + 1, day = date.getDate(), hour = date.getHours(), min = date.getMinutes(), sec = date.getSeconds();
-            month = (month < 10 ? "0" : "") + month;
-            day = (day < 10 ? "0" : "") + day;
-            hour = (hour < 10 ? "0" : "") + hour;
-            min = (min < 10 ? "0" : "") + min;
-            sec = (sec < 10 ? "0" : "") + sec;
-            return str = date.getFullYear() + "-" + month + "-" + day + " " +  hour + ":" + min + ":" + sec;
-        }
         $("#senden").click(function() {
             document.getElementById("loading").style.display = "block";
             $("#result").children().remove();
             let token = $("#tokenForm").serialize().split("=")[1];
             let client = new Discord.Client();
-            client.login(token).then(() => {
-                let result = `<ul style="display: inline-block"><li style="display: inline-block; padding-right: 2em;"> <a href="${client.user.displayAvatarURL}" target="_blank"> <img src="${client.user.displayAvatarURL}" style="border-radius: 50%; width: 5em;"> </a></li><li style="float: right;"> ${client.user.tag}<div>Bot: ${client.user.bot ? "Yes" : "No"}</div><div>ID: ${client.user.id}</div><div>Created: ${getFormattedDate(client.user.createdAt)}</div><div>Servers: ${client.guilds.size}</div><div>Users: ${client.users.size}</div></li></ul>`;
+            client.login(token).then(async () => {
+                if(!client.user.bot){
+                    document.getElementById("loading").style.display = "none";
+                    $("#result").append('<p style="background-color: #f76454; color: white; font-family: Nunito; font-size: 1em; border-radius: 10px; padding: 0.5em;"> This website doesn\'t support non-bot users...</p>');
+                    setTimeout(function(){
+                        $("#result").children("p").remove();
+                    }, 3000);
+                    client.destroy();
+                }
+                let app = await client.fetchApplication();
+                let owner = app.owner.tag;
+                let createdAt = moment(client.user.createdAt, "YYYYMMDD").fromNow();
+                let avatarURL = client.user.displayAvatarURL;
+                let inviteURL = await client.generateInvite();
+                let result = `
+                    <ul style="display: inline-block">
+                        <li style="display: inline-block; padding-right: 2em;">
+                            <a href="${avatarURL}" target="_blank"><img src="${avatarURL}" style="border-radius: 50%; width: 5em;"></a><br>
+                            <br><div>${client.user.tag}</div>
+                            <div><font color="#808080">${client.user.id}</font><div>
+                        </li>
+                        <li style="float: right;">
+                            <font color="#808080">
+                                <div>Created <font color="#FFFFFF">${createdAt}</font></div>
+                                <div>Used by <font color="#FFFFFF">${client.guilds.size}</font> servers for a total of <font color="#FFFFFF">${client.users.size}</font> users</div>
+                                <div>Owned by <font color="#FFFFFF">${owner}</font></div>
+                                <div>This bot is <font color="#FFFFFF">${app.botPublic ? `public</font>, invite it with <a style="color: #7289DA;" href="${inviteURL}" target="_blank">this link</a>` : `private</font>`}</div>
+                                <div>Current bot status is <font color="#FFFFFF">${client.user.presence.status}</font><div>
+                                <div>Current bot game is <font color="#FFFFFF">${client.user.presence.game ? client.user.presence.game.name : "nothing"}</font>
+                            </font>
+                        </li>
+                    </ul>`;
                 document.getElementById("loading").style.display = "none";
                 $("#result").append(result);
                 client.destroy();
