Add created field

--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
                             </li>
                             <li style="float: right;">
                             <br>
+                                <font color="#808080">
+                                    <div>Created <font color="#FFFFFF">${createdAt}</font></div>
                                 </font>
                             </li>
                         </ul>`;
