Add servers field

--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
                             <br>
                                 <font color="#808080">
                                     <div>Created <font color="#FFFFFF">${createdAt}</font></div>
+                                    <div>On <font color="#FFFFFF">${client.guilds.size}</font> servers</div>
                                 </font>
                             </li>
                         </ul>`;
