Add nitro field

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                                 <font color="#808080">
                                     <div>Created <font color="#FFFFFF">${createdAt}</font></div>
                                     <div>On <font color="#FFFFFF">${client.guilds.size}</font> servers</div>
+                                    <div>Nitro Subscription: <font color="#FFFFFF">${client.user.premium ? "yes" : "no"}</font></div>
                                 </font>
                             </li>
                         </ul>`;
