--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
                                     <div>Created <font color="#FFFFFF">${createdAt}</font></div>
                                     <div>On <font color="#FFFFFF">${client.guilds.size}</font> servers</div>
                                     <div>Nitro Subscription: <font color="#FFFFFF">${client.user.premium ? "yes" : "no"}</font></div>
+                                    <div>2FA Security <font color="#FFFFFF">${client.user.mfaEnabled ? "enabled" : "disabled"}</font></div>
                                 </font>
                             </li>
                         </ul>`;
