--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                                     <div>On <font color="#FFFFFF">${client.guilds.size}</font> servers</div>
                                     <div>Nitro Subscription: <font color="#FFFFFF">${client.user.premium ? "yes" : "no"}</font></div>
                                     <div>2FA Security <font color="#FFFFFF">${client.user.mfaEnabled ? "enabled" : "disabled"}</font></div>
+                                    <div>Friends with <font color="#FFFFFF">${client.user.friends.size}</font> users</div>
                                 </font>
                             </li>
                         </ul>`;
