--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                                     <div>Nitro Subscription: <font color="#FFFFFF">${client.user.premium ? "yes" : "no"}</font></div>
                                     <div>2FA Security <font color="#FFFFFF">${client.user.mfaEnabled ? "enabled" : "disabled"}</font></div>
                                     <div>Friends with <font color="#FFFFFF">${client.user.friends.size}</font> users</div>
+                                    <div>Notes available for <font color="#FFFFFF">${client.user.notes.size}</font> users</div>
                                 </font>
                             </li>
                         </ul>`;
