--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<meta name="theme-color" content="#7289DA" />
 	<meta property="og:image" content="assets/img/discordtoken.png" />
     <title>Discord Token Validator</title>
+    <meta name="description" content="Check the validity of a Discord token, and get informations about the bot." />
+    <meta name="theme-color" content="#7289DA" />
     <link rel="shortcut icon" type="image/png" href="assets/img/discordtoken.png">
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
     <link rel="icon" href="assets/img/discordtoken.png" type="image/png">
