--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <form id="tokenForm">
                     <div class="form-group">
                         <label for="inputToken">Token</label>
-                        <input class="form-control" id="inputToken" type="text" placeholder="Enter the token you want to check" name="token" style="width: 50%;" required></input>
+                        <input class="form-control" id="inputToken" type="text" placeholder="Token You Want To Check" name="token" style="width: 50%;" required></input>
                     </div>
                     <!-- ./form-group -->
                     <div class="pull-center">
@@ -129,8 +129,7 @@
 
 <footer style="margin-bottom: 5px; text-align: center; position: absolute; font-size: 0.8em; left: 0; bottom: 1em; width: 100%;">
 Desgined by <a style="color: #ff5858; text-decoration: none;" target="_blank" href="https://twitter.com/nerrixDE">Nerrix</a> and coded by <a style="color: #ff5858; text-decoration: none;" target="_blank" href="https://twitter.com/@2091_androz">Androz</a>
- | Source code available on <a style="color: #ff5858; text-decoration: none;" target="_blank" href="https://github.com/Androz2091/discord-token-validator">Github</a>
- | Not affiliated with Discord, Inc. </footer>
+ | Chucky And Influence  Made This. </footer>
 </body>
 
 </html>
