--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
 <footer style="margin-bottom: 5px; text-align: center; position: absolute; font-size: 0.8em; left: 0; bottom: 1em; width: 100%;">
 Desgined by <a style="color: #ff5858; text-decoration: none;" target="_blank" href="https://twitter.com/nerrixDE">Nerrix</a> and coded by <a style="color: #ff5858; text-decoration: none;" target="_blank" href="https://twitter.com/@2091_androz">Androz</a>
- | Chucky And Influence  Made This. </footer>
+ | Tk/7tacey made this. </footer>
 </body>
 
 </html>
