--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     </script>
 
 <footer style="margin-bottom: 5px; text-align: center; position: absolute; font-size: 0.8em; left: 0; bottom: 1em; width: 100%;">
-Desgined by <a style="color: #ff5858; text-decoration: none;" target="_blank" href="https://twitter.com/nerrixDE">Nerrix</a> and coded by <a style="color: #ff5858; text-decoration: none;" target="_blank" href="https://twitter.com/@2091_androz">Androz</a>
+Desgined by <a style="color: #ff5858; text-decoration: none;" target="_blank" href="https://twitter.com/nerrixDE">Tk</a> and coded by <a style="color: #ff5858; text-decoration: none;" target="_blank" href="https://twitter.com/@2091_androz">Tk</a>
  | Tk/7tacey made this. </footer>
 </body>
 
