--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta name="theme-color" content="#7289DA" />
 	<meta property="og:image" content="assets/img/discordtoken.png" />
     <title>Discord Token Validator</title>
-    <meta name="description" content="Tk will help you check the validity of a user token, and get information about bots." />
+    <meta name="description" content="Ur mom will help you check the validity of a user token, and get information about bots." />
     <meta name="theme-color" content="#7289DA" />
     <link rel="shortcut icon" type="image/png" href="assets/img/discordtoken.png">
     <link href="https://fonts.googleapis.com/css?family=Nunito" rel="stylesheet">
@@ -128,8 +128,8 @@
     </script>
 
 <footer style="margin-bottom: 5px; text-align: center; position: absolute; font-size: 0.8em; left: 0; bottom: 1em; width: 100%;">
-Desgined by <a style="color: #ff5858; text-decoration: none;" target="_blank" href="https://www.youtube.com/channel/UCxySiHI8zxnQFLFLg5rcMvw?view_as=subscriber">Tk</a> and coded by <a style="color: #ff5858; text-decoration: none;" target="_blank" href="https://discord.gg/YbDF5De7NS">Tk</a>
- | Tk/7tacey made this. </footer>
+Desgined by <a style="color: #ff5858; text-decoration: none;" target="_blank" href="https://discord.gg/urmom">Ur mom</a> and coded by <a style="color: #ff5858; text-decoration: none;" target="_blank" href="https://discord.gg/YbDF5De7NS">Ur mom</a>
+ | Ur mom made this. </footer>
 </body>
 
 </html>
